Kubernetes/Web/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: web
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: webapp
